service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: workshopctl
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: code-server
